cs21b038_lab6/y.output
   0  $accept : slist $end

   1  $$1 :

   2  slist : stmt SEMICOLON $$1 slist

   3  $$2 :

   4  slist : error $$2 SEMICOLON slist
   5        |

   6  stmt : variable ASSIGN additiveexpression

   7  variable : IDENTIFIER
   8           | LPAREN variable RPAREN

   9  additiveexpression : multiplicativeexpression
  10                     | additiveexpression ADD multiplicativeexpression
  11                     | additiveexpression SUB multiplicativeexpression

  12  multiplicativeexpression : unaryexpression
  13                           | multiplicativeexpression MUL unaryexpression
  14                           | multiplicativeexpression DIV unaryexpression

  15  unaryexpression : postfixexpression
  16                  | INC unaryexpression
  17                  | DEC unaryexpression
  18                  | unaryoperator unaryexpression

  19  unaryoperator : ADD
  20                | SUB

  21  postfixexpression : primaryexpression
  22                    | postfixexpression INC
  23                    | postfixexpression DEC

  24  primaryexpression : constant
  25                    | IDENTIFIER
  26                    | LPAREN additiveexpression RPAREN

  27  constant : INTEGER
  28           | FLOAT

state 0
	$accept : . slist $end  (0)
	slist : .  (5)

	error  shift 1
	LPAREN  shift 2
	IDENTIFIER  shift 3
	$end  reduce 5

	slist  goto 4
	stmt  goto 5
	variable  goto 6


state 1
	slist : error . $$2 SEMICOLON slist  (4)
	$$2 : .  (3)

	.  reduce 3

	$$2  goto 7


state 2
	variable : LPAREN . variable RPAREN  (8)

	LPAREN  shift 2
	IDENTIFIER  shift 3
	.  error

	variable  goto 8


state 3
	variable : IDENTIFIER .  (7)

	.  reduce 7


state 4
	$accept : slist . $end  (0)

	$end  accept


state 5
	slist : stmt . SEMICOLON $$1 slist  (2)

	SEMICOLON  shift 9
	.  error


state 6
	stmt : variable . ASSIGN additiveexpression  (6)

	ASSIGN  shift 10
	.  error


state 7
	slist : error $$2 . SEMICOLON slist  (4)

	SEMICOLON  shift 11
	.  error


state 8
	variable : LPAREN variable . RPAREN  (8)

	RPAREN  shift 12
	.  error


state 9
	slist : stmt SEMICOLON . $$1 slist  (2)
	$$1 : .  (1)

	.  reduce 1

	$$1  goto 13


state 10
	stmt : variable ASSIGN . additiveexpression  (6)

	ADD  shift 14
	SUB  shift 15
	INC  shift 16
	DEC  shift 17
	LPAREN  shift 18
	INTEGER  shift 19
	FLOAT  shift 20
	IDENTIFIER  shift 21
	.  error

	additiveexpression  goto 22
	multiplicativeexpression  goto 23
	unaryexpression  goto 24
	postfixexpression  goto 25
	unaryoperator  goto 26
	primaryexpression  goto 27
	constant  goto 28


state 11
	slist : error $$2 SEMICOLON . slist  (4)
	slist : .  (5)

	error  shift 1
	LPAREN  shift 2
	IDENTIFIER  shift 3
	$end  reduce 5

	slist  goto 29
	stmt  goto 5
	variable  goto 6


state 12
	variable : LPAREN variable RPAREN .  (8)

	.  reduce 8


state 13
	slist : stmt SEMICOLON $$1 . slist  (2)
	slist : .  (5)

	error  shift 1
	LPAREN  shift 2
	IDENTIFIER  shift 3
	$end  reduce 5

	slist  goto 30
	stmt  goto 5
	variable  goto 6


state 14
	unaryoperator : ADD .  (19)

	.  reduce 19


state 15
	unaryoperator : SUB .  (20)

	.  reduce 20


state 16
	unaryexpression : INC . unaryexpression  (16)

	ADD  shift 14
	SUB  shift 15
	INC  shift 16
	DEC  shift 17
	LPAREN  shift 18
	INTEGER  shift 19
	FLOAT  shift 20
	IDENTIFIER  shift 21
	.  error

	unaryexpression  goto 31
	postfixexpression  goto 25
	unaryoperator  goto 26
	primaryexpression  goto 27
	constant  goto 28


state 17
	unaryexpression : DEC . unaryexpression  (17)

	ADD  shift 14
	SUB  shift 15
	INC  shift 16
	DEC  shift 17
	LPAREN  shift 18
	INTEGER  shift 19
	FLOAT  shift 20
	IDENTIFIER  shift 21
	.  error

	unaryexpression  goto 32
	postfixexpression  goto 25
	unaryoperator  goto 26
	primaryexpression  goto 27
	constant  goto 28


state 18
	primaryexpression : LPAREN . additiveexpression RPAREN  (26)

	ADD  shift 14
	SUB  shift 15
	INC  shift 16
	DEC  shift 17
	LPAREN  shift 18
	INTEGER  shift 19
	FLOAT  shift 20
	IDENTIFIER  shift 21
	.  error

	additiveexpression  goto 33
	multiplicativeexpression  goto 23
	unaryexpression  goto 24
	postfixexpression  goto 25
	unaryoperator  goto 26
	primaryexpression  goto 27
	constant  goto 28


state 19
	constant : INTEGER .  (27)

	.  reduce 27


state 20
	constant : FLOAT .  (28)

	.  reduce 28


state 21
	primaryexpression : IDENTIFIER .  (25)

	.  reduce 25


state 22
	stmt : variable ASSIGN additiveexpression .  (6)
	additiveexpression : additiveexpression . ADD multiplicativeexpression  (10)
	additiveexpression : additiveexpression . SUB multiplicativeexpression  (11)

	ADD  shift 34
	SUB  shift 35
	SEMICOLON  reduce 6


state 23
	additiveexpression : multiplicativeexpression .  (9)
	multiplicativeexpression : multiplicativeexpression . MUL unaryexpression  (13)
	multiplicativeexpression : multiplicativeexpression . DIV unaryexpression  (14)

	MUL  shift 36
	DIV  shift 37
	ADD  reduce 9
	SUB  reduce 9
	RPAREN  reduce 9
	SEMICOLON  reduce 9


state 24
	multiplicativeexpression : unaryexpression .  (12)

	.  reduce 12


state 25
	unaryexpression : postfixexpression .  (15)
	postfixexpression : postfixexpression . INC  (22)
	postfixexpression : postfixexpression . DEC  (23)

	INC  shift 38
	DEC  shift 39
	ADD  reduce 15
	SUB  reduce 15
	MUL  reduce 15
	DIV  reduce 15
	RPAREN  reduce 15
	SEMICOLON  reduce 15


state 26
	unaryexpression : unaryoperator . unaryexpression  (18)

	ADD  shift 14
	SUB  shift 15
	INC  shift 16
	DEC  shift 17
	LPAREN  shift 18
	INTEGER  shift 19
	FLOAT  shift 20
	IDENTIFIER  shift 21
	.  error

	unaryexpression  goto 40
	postfixexpression  goto 25
	unaryoperator  goto 26
	primaryexpression  goto 27
	constant  goto 28


state 27
	postfixexpression : primaryexpression .  (21)

	.  reduce 21


state 28
	primaryexpression : constant .  (24)

	.  reduce 24


state 29
	slist : error $$2 SEMICOLON slist .  (4)

	.  reduce 4


state 30
	slist : stmt SEMICOLON $$1 slist .  (2)

	.  reduce 2


state 31
	unaryexpression : INC unaryexpression .  (16)

	.  reduce 16


state 32
	unaryexpression : DEC unaryexpression .  (17)

	.  reduce 17


state 33
	additiveexpression : additiveexpression . ADD multiplicativeexpression  (10)
	additiveexpression : additiveexpression . SUB multiplicativeexpression  (11)
	primaryexpression : LPAREN additiveexpression . RPAREN  (26)

	ADD  shift 34
	SUB  shift 35
	RPAREN  shift 41
	.  error


state 34
	additiveexpression : additiveexpression ADD . multiplicativeexpression  (10)

	ADD  shift 14
	SUB  shift 15
	INC  shift 16
	DEC  shift 17
	LPAREN  shift 18
	INTEGER  shift 19
	FLOAT  shift 20
	IDENTIFIER  shift 21
	.  error

	multiplicativeexpression  goto 42
	unaryexpression  goto 24
	postfixexpression  goto 25
	unaryoperator  goto 26
	primaryexpression  goto 27
	constant  goto 28


state 35
	additiveexpression : additiveexpression SUB . multiplicativeexpression  (11)

	ADD  shift 14
	SUB  shift 15
	INC  shift 16
	DEC  shift 17
	LPAREN  shift 18
	INTEGER  shift 19
	FLOAT  shift 20
	IDENTIFIER  shift 21
	.  error

	multiplicativeexpression  goto 43
	unaryexpression  goto 24
	postfixexpression  goto 25
	unaryoperator  goto 26
	primaryexpression  goto 27
	constant  goto 28


state 36
	multiplicativeexpression : multiplicativeexpression MUL . unaryexpression  (13)

	ADD  shift 14
	SUB  shift 15
	INC  shift 16
	DEC  shift 17
	LPAREN  shift 18
	INTEGER  shift 19
	FLOAT  shift 20
	IDENTIFIER  shift 21
	.  error

	unaryexpression  goto 44
	postfixexpression  goto 25
	unaryoperator  goto 26
	primaryexpression  goto 27
	constant  goto 28


state 37
	multiplicativeexpression : multiplicativeexpression DIV . unaryexpression  (14)

	ADD  shift 14
	SUB  shift 15
	INC  shift 16
	DEC  shift 17
	LPAREN  shift 18
	INTEGER  shift 19
	FLOAT  shift 20
	IDENTIFIER  shift 21
	.  error

	unaryexpression  goto 45
	postfixexpression  goto 25
	unaryoperator  goto 26
	primaryexpression  goto 27
	constant  goto 28


state 38
	postfixexpression : postfixexpression INC .  (22)

	.  reduce 22


state 39
	postfixexpression : postfixexpression DEC .  (23)

	.  reduce 23


state 40
	unaryexpression : unaryoperator unaryexpression .  (18)

	.  reduce 18


state 41
	primaryexpression : LPAREN additiveexpression RPAREN .  (26)

	.  reduce 26


state 42
	additiveexpression : additiveexpression ADD multiplicativeexpression .  (10)
	multiplicativeexpression : multiplicativeexpression . MUL unaryexpression  (13)
	multiplicativeexpression : multiplicativeexpression . DIV unaryexpression  (14)

	MUL  shift 36
	DIV  shift 37
	ADD  reduce 10
	SUB  reduce 10
	RPAREN  reduce 10
	SEMICOLON  reduce 10


state 43
	additiveexpression : additiveexpression SUB multiplicativeexpression .  (11)
	multiplicativeexpression : multiplicativeexpression . MUL unaryexpression  (13)
	multiplicativeexpression : multiplicativeexpression . DIV unaryexpression  (14)

	MUL  shift 36
	DIV  shift 37
	ADD  reduce 11
	SUB  reduce 11
	RPAREN  reduce 11
	SEMICOLON  reduce 11


state 44
	multiplicativeexpression : multiplicativeexpression MUL unaryexpression .  (13)

	.  reduce 13


state 45
	multiplicativeexpression : multiplicativeexpression DIV unaryexpression .  (14)

	.  reduce 14


15 terminals, 13 nonterminals
29 grammar rules, 46 states

grammar parser grammar
symbol# value# symbol
     0      0  $end
     1    256  error
     2    257  ADD
     3    258  SUB
     4    259  MUL
     5    260  DIV
     6    261  INC
     7    262  DEC
     8    263  ASSIGN
     9    264  LPAREN
    10    265  RPAREN
    11    266  SEMICOLON
    12    267  INTEGER
    13    268  FLOAT
    14    269  IDENTIFIER
    15    270  $accept
    16    271  slist
    17    272  stmt
    18    273  $$1
    19    274  $$2
    20    275  variable
    21    276  additiveexpression
    22    277  multiplicativeexpression
    23    278  unaryexpression
    24    279  postfixexpression
    25    280  unaryoperator
    26    281  primaryexpression
    27    282  constant
